<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">粤教云</string>
    <string name="main_activity">粤教云</string>
    <string name="menu_search">Search</string>
    <string name="hello_world">Hello world!</string>
    <!-- 用于MainActivity的Menu -->
    <string name="menu_moreoverflow">更多</string>
    <string name="menu_share">分享</string>
    <string name="favorite">收藏</string>
    <string name="playHistory">历史</string>
    <string name="setting">设置</string>
    <string name="test">在线考试</string>
    <string name="exit">退出</string>
    <string name="video_layout_loading">载入中</string>
    <string name="search">搜索</string>
    <string name="pull_to_refresh">下拉可以刷新</string>  
    <string name="release_to_refresh">释放立即刷新</string>  
    <string name="refreshing">正在刷新…</string>  
    <string name="not_updated_yet">暂未更新过</string>  
    <string name="updated_at">上次更新于%1$s前</string>  
    <string name="updated_just_now">刚刚更新</string>  
    <string name="time_error">时间有问题</string>  
    <string name="menu_test">在线考试</string>
    <string name="voice_recognition">App/Voice Recognition</string>
    <string name="speak_button">Speak!</string>
    <string name="ShowVodsInSelectedPpList">ShowVodsInSelectedPpList</string>
    <string name="update">检测更新</string>
    <string name="cache">清除缓存</string>
     <string name="traffic">流量统计</string>
    <string name="about">关于粤教云</string>
    	<!-- The label for use as a searchable item   可能是com.example.yjywelcometest？-->
    <string name="search_label">粤教云</string>
    	<!-- The hint text that appears in the search box. -->
    <string name="search_hint">搜索</string>
        <!-- The description that will show up in the search settings for this source.  -->
    <string name="settings_description">Definitions of vods</string>
    <string name="menu_likes">我的收藏</string>
    <string name="menu_settings">设置</string>
   
</resources>
