<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    


      <Button
          android:id="@+id/cache"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/cache" />

    
       <Button
            android:id="@+id/cleansetting"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cache" 
            android:text="清除设置和收藏"
                   />
         
         <Button 
             android:id="@+id/traffic"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cleansetting" 
            android:text="@string/traffic"
                    />
         
       <Button 
             android:id="@+id/about"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/traffic" 
            android:text="@string/about"
              />

      <setting.ReportOval
          android:id="@+id/oval"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:layout_alignParentBottom="true"
          android:layout_centerHorizontal="true" />

    </RelativeLayout>

   
